feat: implement campaign creation with enhanced logging and error handling